product + inventory services